# Study

1.Linux_C++/: Linux下静态库和动态库的编写和使用
1.Linux_C++/01_Linux常用指令/: Linux常用命令.txt
1.Linux_C++/01_Linux常用指令/testcpp/: test
1.Linux_C++/02_g++编译/: 第三讲 GCC编译器
1.Linux_C++/02_g++编译/SwapFunc_DynamicLib/: main_share
1.Linux_C++/02_g++编译/SwapFunc_StaticLib/: main.cpp  main_staticlib
1.Linux_C++/02_g++编译/SwapFunc_StaticLib/include/: swap.h
1.Linux_C++/04_vscode/SwapFunc/src/: swap.cpp
1.Linux_C++/05_cmake编译/: 第六讲_cmake编译
1.Linux_C++/05_cmake编译/HelloWorld/: CMakeLists.txt
1.Linux_C++/05_cmake编译/SwapFunc/: CMakeLists.txt
1.Linux_C++/05_cmake编译/SwapFunc/src/: CMakeLists.txt
1.Linux_C++/06_实战工程/Solider/: CMakeLists.txt  main.cpp
1.Linux_C++/06_实战工程/Solider/include/: gun.h  solider.h
1.Linux_C++/06_实战工程/Solider/src/: gun.cpp  solider.cpp
1.Linux_C++/07_对象的复制/: CMakeLists.txt
1.Linux_C++/07_对象的复制/include/: ctest.h
1.Linux_C++/07_对象的复制/src/: main.cpp
1.Linux_C++/课程七讲_源码/Class_4/: .sum.cpp.swp  sum
3.ROS/1.catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
3.ROS/1.catkin_ws/devel/lib/pkgconfig/: test_pkg.pc
3.ROS/1.catkin_ws/devel/share/test_pkg/cmake/: test_pkgConfig.cmake
3.ROS/1.catkin_ws/install/: setup.sh
3.ROS/1.catkin_ws/src/test_pkg/: package.xml
4.Makefile/: Makefile  add.cpp  add.h  div.cpp  div.h  main.cpp  mult.cpp  mult.h  sub.cpp  sub.h
